Mise à jour du cv

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mon cv</title>
+    <title>Mon CV</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -24,11 +24,13 @@
         <h2>Pacours Académique</h2>
         <hr>
         <div>
-            2023 :Baccalauréat série F3 à CPET Saint Nelchael <br><br>
+            2025 : Deuxième année en Systhème Indistruel à GASA - Formation <br><br>
+            2024 : Première année en Systhème Indistruel à GASA - Formation <br><br>
+            2023 : Baccalauréat série F3 à CPET Saint Nelchael <br><br>
          	2023 : Diplôme du Technicien (DT) série EL à Saint Nelchael <br><br>
-            2022 : Certificat d’Amplitude Professionnelle (CAP) à CPET Saint Nelchaël <br><br>
-            2020 : Brevet d’ETUDE du Premier Cycle (BEPC) à CEG DJEFFA <br><br>
-            2016 : Certificat d’Etude Primaire (CEP) à Saint Joseph de Copertino <br><br>
+            2022 : Certificat d'Amplitude Professionnelle (CAP) à CPET Saint Nelchaël <br><br>
+            2020 : Brevet d'ETUDE du Premier Cycle (BEPC) à CEG DJEFFA <br><br>
+            2016 : Certificat d'Etude Primaire (CEP) à Saint Joseph de Copertino <br><br>
 
         </div>
         <h2>
@@ -36,9 +38,9 @@
         </h2>
         <hr>
         <div>
-            	Maitrise du Français à l’écrit et à l’oral <br><br>
+            	Maitrise du Français à l'écrit et à l'oral <br><br>
              	Maitrise partielle des logiciel word ; PowerPoint <br><br>
-            	Maitrise partielle de l’anglais; Excel <br><br>
+            	Maitrise partielle de l'anglais; Excel <br><br>
                 Maitrise de certaine installation électrique <br><br>
 
         </div>
